--- a/motiv8-fe/src/index.css
+++ b/motiv8-fe/src/index.css
@@ -23,11 +23,13 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
